--- a/gb/17/6/7/n9237978.md
+++ b/gb/17/6/7/n9237978.md
@@ -1,12 +1,12 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/nnmtsc3385/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/nnmtsc3385/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/nnmtsc3385/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/nnmtsc3385/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/nnmtsc3385/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/nnmtsc3385/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/nnmtsc3385/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/nnmtsc3385/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/nnmtsc3385/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/nnmtsc3385/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/nnmtsc3385/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/nnmtsc3385/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/nnmtsc3385/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/nnmtsc3385/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/nnmtsc3385/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/nnmtsc3385/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>南亚技术学院 下学期5系所停招</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2017年06月07日讯】（大纪元记者江禹婵台湾台北报导）教育部公布105学年度技专院校各项评鉴结果，24个受评学校中，仅有<ahref="https://github.com/nnmtsc3385/djy/blob/master/gb/tag/%E5%8D%97%E4%BA%9A%E6%8A%80%E6%9C%AF%E5%AD%A6%E9%99%A2.md#1">南亚技术学院</a>“视觉传达艺术系”未通过，教育部表示，南亚视传系经过上次评鉴委员给予建议，在课程及师资规划上，未见有进步或改善，因此评鉴不予通过，该校加上目前已<ahref="https://github.com/nnmtsc3385/djy/blob/master/gb/tag/%E5%81%9C%E6%8B%9B.md#1">停招</a>4科系，新学年确定已有5系停招。</p>
-<p>教育部表示，<ahref="https://github.com/nnmtsc3385/djy/blob/master/gb/tag/%E5%8D%97%E4%BA%9A%E6%8A%80%E6%9C%AF%E5%AD%A6%E9%99%A2.md#1">南亚技术学院</a>现有17科系中，106学年度南亚共有5<ahref="https://github.com/nnmtsc3385/djy/blob/master/gb/tag/%E5%81%9C%E6%8B%9B.md#1">停招</a>科系，占近三成，未来该校若要成立新的系所，部内表示将会通盘考量，审慎评估。</p>
+<p>【大纪元2017年06月07日讯】（大纪元记者江禹婵台湾台北报导）教育部公布105学年度技专院校各项评鉴结果，24个受评学校中，仅有<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%8D%97%E4%BA%9A%E6%8A%80%E6%9C%AF%E5%AD%A6%E9%99%A2.md#1">南亚技术学院</a>“视觉传达艺术系”未通过，教育部表示，南亚视传系经过上次评鉴委员给予建议，在课程及师资规划上，未见有进步或改善，因此评鉴不予通过，该校加上目前已<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%81%9C%E6%8B%9B.md#1">停招</a>4科系，新学年确定已有5系停招。</p>
+<p>教育部表示，<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%8D%97%E4%BA%9A%E6%8A%80%E6%9C%AF%E5%AD%A6%E9%99%A2.md#1">南亚技术学院</a>现有17科系中，106学年度南亚共有5<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%81%9C%E6%8B%9B.md#1">停招</a>科系，占近三成，未来该校若要成立新的系所，部内表示将会通盘考量，审慎评估。</p>
 <p>技职司长杨玉惠提到，南亚技术学院视觉传达系是今年唯一没有通过的系所，该校在课程及师资规划上，上次评鉴委员已有给建议，却仍没看到进步与改善，所以评为未通过，预计下学期停招。新学年度停招科系包含行销与流通管理系、创意流行时尚设计系、资讯管理系、应用科技研究所及视觉传达系。</p>
 <p>为确保目前仍在就读的学生，不会丧失受教权，杨玉惠强调，学校部分科系停招后仍需确保提供优良教学，教育部后续也将进行系所师资质量追踪，以及教学品质查核，督促学校改善。</p>
 <p>校方主任秘书简仁德表示，学生该有的权益都会照顾到，绝对不会影响学生受教权。学校考量整体校务发展，针对市场需求较弱的科系，在104年向教育部申请停招4个科系，下学期正式停招的包括行销与流通管理系、创意流行时尚设计系、资讯管理系、应用科技研究所，在停招前已有举办座谈会，告知学校未来走向，学生也都能体会校方作法并无争议。</p>
@@ -17,47 +17,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/15/2/10/n4363256.md#1">台教部：兴国需协助旧生原校毕业</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/16/12/26/n8633037.md#1">台106学年143技专科系停招  56系将熄灯</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/16/12/26/n8633678.md#1">六成大学减招 台大也上榜</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/17/4/23/n9067219.md#1">改善计划若未过 台亚太技术学院恐停招</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/17/4/24/n9067950.md#1">杨泮池确定不续任 教育部长：尊重</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/17/4/26/n9075736.md#1">亚太学院恐停招 教职员盼师生权益不打折</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/17/4/26/n9075809.md#1">大专转型退场名单 教长：近十校列管辅导</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/17/4/26/n9077636.md#1">大专转型退场 潘文忠：近10校列管</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/21/4/20/n12892781.md#1">台湾国际团结法案 澄清联大2758决议不涉台</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/21/4/20/n12892917.md#1">新台币创24年新高</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/2/10/n4363256.md#1">台教部：兴国需协助旧生原校毕业</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/12/26/n8633037.md#1">台106学年143技专科系停招  56系将熄灯</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/12/26/n8633678.md#1">六成大学减招 台大也上榜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/4/23/n9067219.md#1">改善计划若未过 台亚太技术学院恐停招</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/4/24/n9067950.md#1">杨泮池确定不续任 教育部长：尊重</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/4/26/n9075736.md#1">亚太学院恐停招 教职员盼师生权益不打折</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/4/26/n9075809.md#1">大专转型退场名单 教长：近十校列管辅导</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/4/26/n9077636.md#1">大专转型退场 潘文忠：近10校列管</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689135.md#1">台太鲁阁号事故周年 全毁车厢做惨痛教材</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689077.md#1">全球经济成长放缓 高盛下调台湾IC设计厂获利预测</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/nnmtsc3385/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/1/6/n11772976.md#1" target="_blank">林辉：中共当年盘剥延安人 被骂很“黑”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/12/8/9/n3655381.md#1" target="_blank">揭秘：中共诬陷法轮功是这样编出来的</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/1/n10752911.md#1" target="_blank">智诚：“除夕宴”在恸哭声中进行</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/22/n10869347.md#1" target="_blank">感恩节 法轮大法弟子感念师恩</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/21/4/15/n12882802.md#1">【未解之谜】三星堆文明究竟源自哪里？</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/21/3/3/n12785986.md#1">【命理】为何三年前后看相结果大不同？</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/21/3/26/n12838624.md#1">昴星人传神谕  火星童留预言</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/21/4/13/n12877592.md#1">【未解之谜】希尔夫妇被外星人绑架的惊悚经历</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/21/4/15/n12881410.md#1">韩国史书研究：旱涝等异常天气预示战争来临</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/21/4/18/n12887969.md#1">【小宇宙传说】宇宙中最大谜题：什么是时间？</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/21/4/19/n12891330.md#1">【新闻看点】美日舍5G抢攻6G 联澳建海底电缆</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/21/4/19/n12890381.md#1">【微视频】刘长乐卖凤凰股份 马云的蚂蚁还远吗</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/21/4/18/n12888141.md#1">温家宝发文疑讽当局遭微信禁 专家：政局诡谲</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/21/4/18/n12888818.md#1">权斗再起 中共体制内批战狼外交等习政策</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/21/4/18/n12887709.md#1">北京市检察院政治部主任马立娜坠亡</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/21/4/17/n12887210.md#1">那英《浪姐2》总决赛夺冠 陷假唱疑云登热搜</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/21/4/18/n12887909.md#1">黄秋生又来台接受隔离 申请就业金卡已获准</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/21/4/17/n12886662.md#1">《名侦探柯南：绯色的弹丸》影评：传奇要角赤井家族 终于大放异彩</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/21/4/18/n12888429.md#1">赵丽颖台上不慎掉耳环 救场四步骤获赞超专业</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/21/4/18/n12888617.md#1">吐槽一男子开车乱扔烟头 舒淇获赞生气也可爱</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/21/4/15/n12882188.md#1">睡觉抽筋是缺钙？2秘诀补钙  比单喝牛奶更有效</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/21/4/16/n12884330.md#1">厨房台面更换 人造石还是天然石台面好？</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/21/4/11/n12872973.md#1">灭活疫苗存两风险？中国疫苗三大问题解析</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/21/4/19/n12889678.md#1">美国农夫说 鸡蛋要这样摆放才能保持新鲜</a></li>
-<li><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/21/4/18/n12887558.md#1">研究：东亚人或源自台湾 可追溯至5000年前</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688842.md#1">【十字路口】曹兴诚重炮轰 中共是“人类公敌”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688852.md#1">【新闻大家谈】美国2疏忽 中共借机叫板三角联盟</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688712.md#1">【马克时空】2023美军费超中共3倍 核武库全面现代化</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685151.md#1">玄彬与孙艺真本日于首尔结婚 婚礼照笑容灿烂</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/26/n13674661.md#1">自制一碗降糖餐！十大降血糖食物一次看</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677160.md#1">早餐来一杯治愈大脑！清除脑雾的方法</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/nnmtsc3385/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/nnmtsc3385/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/6/7/n9237978.htm">南亚技术学院 下学期5系所停招</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/6/7/n9237978.htm">南亚技术学院 下学期5系所停招</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/nnmtsc3385/djy/blob/master/gb/17/6/7/n9237978.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmtsc3385/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/nnmtsc3385/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/nnmtsc3385/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmtsc3385/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmtsc3385/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmtsc3385/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmtsc3385/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmtsc3385/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmtsc3385/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmtsc3385/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmtsc3385/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmtsc3385/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmtsc3385/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmtsc3385/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmtsc3385/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmtsc3385/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmtsc3385/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmtsc3385/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmtsc3385/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmtsc3385/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmtsc3385/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmtsc3385/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmtsc3385/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/nnmtsc3385/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmtsc3385/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/nnmtsc3385/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/nnmtsc3385/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/17/6/7/n9237978.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
